--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <script src="introducao/basico.js"></script>
     <script src="tipos/tipos.js"></script>
     <script src="desafios/desafio1.js"></script>
+    <script src="tipos/multiplosTipos.js"></script>
+    <script src="desafios/desafio2.js"></script>
+
 </body>
 </html>
