--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="introducao/basico.js"></script>
-    <script src="tipos/tipos.js"></script>
-    <script src="desafios/desafio1.js"></script>
-    <script src="tipos/multiplosTipos.js"></script>
-    <script src="desafios/desafio2.js"></script>
+    <script src="ecmascript/ecmascript.js"></script>
 
 </body>
 </html>
